Fixing grid display on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ body,html{
 #photoIcons{
   padding: 10px;
   overflow: scroll;
-  overflow-y: visible;
+  overflow-y: scroll;
   overflow-x: hidden;
   display: grid;
   grid-template-columns: repeat(auto-fill, 200px);
